Dockerfile and Java 11 compatibility